[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/UI/BattleEnvironment/Modules/C2_Module.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/BattleEnvironment/Modules/Message_Module.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/BattleEnvironment/Modules/C3_Module.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/BattleEnvironment/Modules/C1_Module.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/BattleEnvironment/Scripts/BattleParty.gd" type="Script" id=5]
[ext_resource path="res://Scenes/UI/BattleEnvironment/Scripts/BattleBrain.gd" type="Script" id=6]
[ext_resource path="res://Assets/UI/Battle/Battle_UI_v2_01.png" type="Texture" id=7]
[ext_resource path="res://Scenes/UI/BattleEnvironment/Scripts/BattleEnemyParty.gd" type="Script" id=8]
[ext_resource path="res://Scenes/_Test_Scenes/Tim_Test_Scenes/BG_Test.tscn" type="PackedScene" id=9]

[node name="BattleUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="CanvasLayer" parent="."]

[node name="Ceil" type="ColorRect" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0.717647, 0.87451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Floor" type="ColorRect" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 132.0
color = Color( 0.156863, 0.482353, 0.380392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Battle_UI_v2_01" type="Sprite" parent="BG"]
position = Vector2( 160, 120 )
texture = ExtResource( 7 )

[node name="Node2D" parent="BG/Battle_UI_v2_01" instance=ExtResource( 9 )]
position = Vector2( -160, -120 )

[node name="EnemyParty" type="CanvasLayer" parent="."]
script = ExtResource( 8 )
enemies_debug_keys = [ "FoxEnemy" ]

[node name="HBoxContainer" type="HBoxContainer" parent="EnemyParty"]
margin_left = 160.0
margin_top = 156.0
margin_right = 160.0
margin_bottom = 156.0
grow_horizontal = 2
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleDialogue" type="CanvasLayer" parent="."]

[node name="BattleDialogueBox" parent="BattleDialogue" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.165
anchor_right = 0.5
anchor_bottom = 0.165
margin_top = 0.399994
margin_bottom = 0.399994

[node name="BattleModules" type="CanvasLayer" parent="."]

[node name="Party_Modules" type="HBoxContainer" parent="BattleModules" groups=[
"BattleParty",
"Persistent",
]]
anchor_left = 0.5
anchor_top = 0.835
anchor_right = 0.5
anchor_bottom = 0.835
margin_left = -98.0
margin_top = -0.399994
margin_right = 94.0
margin_bottom = -0.399994
custom_constants/separation = 96
alignment = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
C2_in_party = true
C3_in_party = true

[node name="C1_Module" parent="BattleModules/Party_Modules" instance=ExtResource( 4 )]
skills = {
"Lil' Ice": 6
}

[node name="C2_Module" parent="BattleModules/Party_Modules" instance=ExtResource( 1 )]
margin_left = 96.0
margin_right = 96.0
save_id = "C2"
skills = {
"Lil' Ice": 6
}

[node name="C3_Module" parent="BattleModules/Party_Modules" instance=ExtResource( 3 )]
margin_left = 192.0
margin_right = 192.0
save_id = "C3"
skills = {
"Lil' Ice": 6
}
